deploy/cms/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms
spec:
  replicas: 1
  template:
    spec:
      serviceAccountName: cms
      containers:
      - image: ghcr.io/nexeraprotocol/nexeraid/apps/cms:placeholder
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /healthcheck
            port: 3004
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 1
        name: cms
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 128Mi
