deploy/cms/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cms
  namespace: cms
spec:
  ports:
  - name: backend
    port: 3004
    protocol: TCP
    targetPort: 3004
  selector:
    app: cms
  type: ClusterIP
